AnimationControl/OAL/OALParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from OAL.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class OALParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, AnyOrMany=63, RelationshipSpecification=64, 
		VariableName=65, Text=66, Digit=67, Nondigit=68, Whitespace=69, NewLine=70;
	public const int
		RULE_lines = 0, RULE_line = 1, RULE_parCommand = 2, RULE_ifCommnad = 3, 
		RULE_whileCommand = 4, RULE_foreachCommand = 5, RULE_continueCommand = 6, 
		RULE_breakCommand = 7, RULE_exeCommandQueryCreate = 8, RULE_exeCommandQueryRelate = 9, 
		RULE_exeCommandQuerySelect = 10, RULE_exeCommandQuerySelectRelatedBy = 11, 
		RULE_exeCommandQueryDelete = 12, RULE_exeCommandQueryUnrelate = 13, RULE_exeCommandAssignment = 14, 
		RULE_exeCommandCall = 15, RULE_commands = 16, RULE_relationshipLink = 17, 
		RULE_instanceHandle = 18, RULE_keyLetter = 19, RULE_whereExpression = 20, 
		RULE_start = 21, RULE_className = 22, RULE_variableName = 23, RULE_methodName = 24, 
		RULE_anyOrMany = 25, RULE_atribute = 26, RULE_expr = 27, RULE_relationshipSpecification = 28;
	public static readonly string[] ruleNames = {
		"lines", "line", "parCommand", "ifCommnad", "whileCommand", "foreachCommand", 
		"continueCommand", "breakCommand", "exeCommandQueryCreate", "exeCommandQueryRelate", 
		"exeCommandQuerySelect", "exeCommandQuerySelectRelatedBy", "exeCommandQueryDelete", 
		"exeCommandQueryUnrelate", "exeCommandAssignment", "exeCommandCall", "commands", 
		"relationshipLink", "instanceHandle", "keyLetter", "whereExpression", 
		"start", "className", "variableName", "methodName", "anyOrMany", "atribute", 
		"expr", "relationshipSpecification"
	};

	private static readonly string[] _LiteralNames = {
		null, "'par'", "'thread'", "'end thread;'", "'end par;'", "'if'", "'('", 
		"')'", "'elif'", "'else'", "'end if;'", "'while'", "'end while;'", "'for each'", 
		"' in '", "'end for;'", "'continue;'", "'break;'", "'create object instance '", 
		"' of '", "';'", "'create object instance of '", "'relate '", "' to '", 
		"' across '", "'select any '", "' from instances of '", "' where '", "'select many '", 
		"' related by '", "'->'", "'delete object instance '", "'unrelate '", 
		"' from '", "'='", "'assign '", "'.'", "'call from '", "'::'", "'() to '", 
		"'()'", "'['", "']'", "'cardinality '", "'*'", "'/'", "'%'", "'+'", "'-'", 
		"'<'", "'>'", "'<='", "'>='", "'empty '", "'not_empty '", "'NOT '", "'not '", 
		"'=='", "'!='", "'AND'", "'OR'", "'and'", "'or'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "AnyOrMany", "RelationshipSpecification", "VariableName", 
		"Text", "Digit", "Nondigit", "Whitespace", "NewLine"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OAL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OALParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OALParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OALParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LinesContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(OALParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lines; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterLines(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitLines(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinesContext lines() {
		LinesContext _localctx = new LinesContext(Context, State);
		EnterRule(_localctx, 0, RULE_lines);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 58; line();
				}
				}
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
			State = 63; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ExeCommandQueryCreateContext exeCommandQueryCreate() {
			return GetRuleContext<ExeCommandQueryCreateContext>(0);
		}
		public ExeCommandQueryRelateContext exeCommandQueryRelate() {
			return GetRuleContext<ExeCommandQueryRelateContext>(0);
		}
		public ExeCommandQuerySelectContext exeCommandQuerySelect() {
			return GetRuleContext<ExeCommandQuerySelectContext>(0);
		}
		public ExeCommandQuerySelectRelatedByContext exeCommandQuerySelectRelatedBy() {
			return GetRuleContext<ExeCommandQuerySelectRelatedByContext>(0);
		}
		public ExeCommandQueryDeleteContext exeCommandQueryDelete() {
			return GetRuleContext<ExeCommandQueryDeleteContext>(0);
		}
		public ExeCommandQueryUnrelateContext exeCommandQueryUnrelate() {
			return GetRuleContext<ExeCommandQueryUnrelateContext>(0);
		}
		public ExeCommandAssignmentContext exeCommandAssignment() {
			return GetRuleContext<ExeCommandAssignmentContext>(0);
		}
		public ExeCommandCallContext exeCommandCall() {
			return GetRuleContext<ExeCommandCallContext>(0);
		}
		public ContinueCommandContext continueCommand() {
			return GetRuleContext<ContinueCommandContext>(0);
		}
		public BreakCommandContext breakCommand() {
			return GetRuleContext<BreakCommandContext>(0);
		}
		public WhileCommandContext whileCommand() {
			return GetRuleContext<WhileCommandContext>(0);
		}
		public IfCommnadContext ifCommnad() {
			return GetRuleContext<IfCommnadContext>(0);
		}
		public ForeachCommandContext foreachCommand() {
			return GetRuleContext<ForeachCommandContext>(0);
		}
		public ParCommandContext parCommand() {
			return GetRuleContext<ParCommandContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 65; exeCommandQueryCreate();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 66; exeCommandQueryRelate();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 67; exeCommandQuerySelect();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 68; exeCommandQuerySelectRelatedBy();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 69; exeCommandQueryDelete();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 70; exeCommandQueryUnrelate();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 71; exeCommandAssignment();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 72; exeCommandCall();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 73; continueCommand();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 74; breakCommand();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 75; whileCommand();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 76; ifCommnad();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 77; foreachCommand();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 78; parCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParCommandContext : ParserRuleContext {
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ParCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterParCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitParCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParCommandContext parCommand() {
		ParCommandContext _localctx = new ParCommandContext(Context, State);
		EnterRule(_localctx, 4, RULE_parCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(T__0);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 82; Match(T__1);
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 83; line();
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
				State = 88; Match(T__2);
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 );
			State = 94; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfCommnadContext : ParserRuleContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public IfCommnadContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifCommnad; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterIfCommnad(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitIfCommnad(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfCommnad(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfCommnadContext ifCommnad() {
		IfCommnadContext _localctx = new IfCommnadContext(Context, State);
		EnterRule(_localctx, 6, RULE_ifCommnad);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(T__4);
			State = 97; Match(T__5);
			State = 98; expr(0);
			State = 99; Match(T__6);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 100; line();
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__7) {
				{
				{
				State = 105; Match(T__7);
				State = 106; Match(T__5);
				State = 107; expr(0);
				State = 108; Match(T__6);
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 109; line();
					}
					}
					State = 112;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 119; Match(T__8);
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 120; line();
					}
					}
					State = 123;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
				}
			}

			State = 127; Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileCommandContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public WhileCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterWhileCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitWhileCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileCommandContext whileCommand() {
		WhileCommandContext _localctx = new WhileCommandContext(Context, State);
		EnterRule(_localctx, 8, RULE_whileCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129; Match(T__10);
			State = 130; Match(T__5);
			State = 131; expr(0);
			State = 132; Match(T__6);
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 133; line();
				}
				}
				State = 136;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
			State = 138; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForeachCommandContext : ParserRuleContext {
		public VariableNameContext[] variableName() {
			return GetRuleContexts<VariableNameContext>();
		}
		public VariableNameContext variableName(int i) {
			return GetRuleContext<VariableNameContext>(i);
		}
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ForeachCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_foreachCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterForeachCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitForeachCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForeachCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForeachCommandContext foreachCommand() {
		ForeachCommandContext _localctx = new ForeachCommandContext(Context, State);
		EnterRule(_localctx, 10, RULE_foreachCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(T__12);
			State = 141; variableName();
			State = 142; Match(T__13);
			State = 143; variableName();
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 144; line();
				}
				}
				State = 147;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__10) | (1L << T__12) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__36))) != 0) || _la==VariableName );
			State = 149; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContinueCommandContext : ParserRuleContext {
		public ContinueCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_continueCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterContinueCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitContinueCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContinueCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContinueCommandContext continueCommand() {
		ContinueCommandContext _localctx = new ContinueCommandContext(Context, State);
		EnterRule(_localctx, 12, RULE_continueCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151; Match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BreakCommandContext : ParserRuleContext {
		public BreakCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_breakCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterBreakCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitBreakCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBreakCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BreakCommandContext breakCommand() {
		BreakCommandContext _localctx = new BreakCommandContext(Context, State);
		EnterRule(_localctx, 14, RULE_breakCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153; Match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExeCommandQueryCreateContext : ParserRuleContext {
		public InstanceHandleContext instanceHandle() {
			return GetRuleContext<InstanceHandleContext>(0);
		}
		public KeyLetterContext keyLetter() {
			return GetRuleContext<KeyLetterContext>(0);
		}
		public ExeCommandQueryCreateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exeCommandQueryCreate; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.EnterExeCommandQueryCreate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOALListener typedListener = listener as IOALListener;
			if (typedListener != null) typedListener.ExitExeCommandQueryCreate(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOALVisitor<TResult> typedVisitor = visitor as IOALVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExeCommandQueryCreate(this);
			else return visitor.VisitChildren(this);
		}
	}
